docs/refs/script-api/server/0.1.0/entityattributecomponent.md
# `EntityAttributeComponent`

> 文档版本：1.21.50.25

`EntityAttributeComponent`类，扩展自[`IEntityComponent`](./ientitycomponent.md)。script_api.mojang-minecraft.entityattributecomponent.description

## 属性

/// define
`current`


///

```js
read-only current: float;
```

/// html | div.result
//// define
`current`：`float`

- script_api.mojang-minecraft.entityattributecomponent.current.description


////

///


/// define
`value`


///

```js
read-only value: float;
```

/// html | div.result
//// define
`value`：`float`

- script_api.mojang-minecraft.entityattributecomponent.value.description


////

///


## 方法

/// define
`resetToDefaultValue`


///

script_api.mojang-minecraft.entityattributecomponent.resettodefaultvalue.description

```js
resetToDefaultValue(): void
```

/// html | div.result
//// define
返回值：`void`

- script_api.mojang-minecraft.entityattributecomponent.resettodefaultvalue.return


////

///


/// define
`resetToMaxValue`


///

script_api.mojang-minecraft.entityattributecomponent.resettomaxvalue.description

```js
resetToMaxValue(): void
```

/// html | div.result
//// define
返回值：`void`

- script_api.mojang-minecraft.entityattributecomponent.resettomaxvalue.return


////

///


/// define
`resetToMinValue`


///

script_api.mojang-minecraft.entityattributecomponent.resettominvalue.description

```js
resetToMinValue(): void
```

/// html | div.result
//// define
返回值：`void`

- script_api.mojang-minecraft.entityattributecomponent.resettominvalue.return


////

///


/// define
`setCurrent`


///

script_api.mojang-minecraft.entityattributecomponent.setcurrent.description

```js
setCurrent(value: float): boolean
```

/// html | div.result
//// define
`value`：`float`

- script_api.mojang-minecraft.entityattributecomponent.setcurrent.value.description


////

//// define
返回值：`boolean`

- script_api.mojang-minecraft.entityattributecomponent.setcurrent.return


////

///

