docs/refs/script-api/server/1.8.0/entityattributecomponent.md
# `EntityAttributeComponent`

> 文档版本：1.21.60.21

`EntityAttributeComponent`类，扩展自[`EntityComponent`](./entitycomponent.md)。script_api.@minecraft/server.entityattributecomponent.description

## 属性

/// define
`currentValue`


///

```js
read-only currentValue: float;
```

/// html | div.result
//// define
`currentValue`：`float`

- script_api.@minecraft/server.entityattributecomponent.currentvalue.description


////

///


/// define
`defaultValue`


///

```js
read-only defaultValue: float;
```

/// html | div.result
//// define
`defaultValue`：`float`

- script_api.@minecraft/server.entityattributecomponent.defaultvalue.description


////

///


/// define
`effectiveMax`


///

```js
read-only effectiveMax: float;
```

/// html | div.result
//// define
`effectiveMax`：`float`

- script_api.@minecraft/server.entityattributecomponent.effectivemax.description


////

///


/// define
`effectiveMin`


///

```js
read-only effectiveMin: float;
```

/// html | div.result
//// define
`effectiveMin`：`float`

- script_api.@minecraft/server.entityattributecomponent.effectivemin.description


////

///


## 方法

/// define
`resetToDefaultValue`


///

script_api.@minecraft/server.entityattributecomponent.resettodefaultvalue.description

```js
resetToDefaultValue(): void
```

/// html | div.result
//// define
返回值：`void`

- script_api.@minecraft/server.entityattributecomponent.resettodefaultvalue.return


////

///


/// define
`resetToMaxValue`


///

script_api.@minecraft/server.entityattributecomponent.resettomaxvalue.description

```js
resetToMaxValue(): void
```

/// html | div.result
//// define
返回值：`void`

- script_api.@minecraft/server.entityattributecomponent.resettomaxvalue.return


////

///


/// define
`resetToMinValue`


///

script_api.@minecraft/server.entityattributecomponent.resettominvalue.description

```js
resetToMinValue(): void
```

/// html | div.result
//// define
返回值：`void`

- script_api.@minecraft/server.entityattributecomponent.resettominvalue.return


////

///


/// define
`setCurrentValue`


///

script_api.@minecraft/server.entityattributecomponent.setcurrentvalue.description

```js
setCurrentValue(value: float): boolean
```

/// html | div.result
//// define
`value`：`float`

- script_api.@minecraft/server.entityattributecomponent.setcurrentvalue.value.description


////

//// define
返回值：`boolean`

- script_api.@minecraft/server.entityattributecomponent.setcurrentvalue.return


////

///

